Able to edit a lumber sub category.

--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -1,4 +1,22 @@
-﻿html {
+﻿.lumberCategoryView {
+}
+
+.lumberCategoryForm {
+}
+
+.lumberSubCategoryTab {
+}
+
+.lumberSubCategoryView {
+}
+
+.lumberSubCategoryForm {
+}
+
+.numeric {
+}
+
+html {
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
