--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/w2ui")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/thermory")
     @RenderSection("scripts", required: false)
 </head>
 <body>
