--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -17,6 +17,12 @@
     <li>
         <h5>5/11/2016</h5>
         <ul>
+            <li>Added ability to add and edit lumber sub categories.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>5/11/2016</h5>
+        <ul>
             <li>Added ability to add and edit lumber categories.</li>
         </ul>
     </li>
