--- a/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
@@ -6,6 +6,7 @@
 
 <input type="hidden" id="@string.Format("lumberProductId{0}", suffix)" value="@Model.LumberProduct.Id" />
 <input type="hidden" id="@string.Format("lumberTypeId{0}", suffix)" value="@Model.LumberProduct.LumberTypeId" />
+<input type="hidden" id="@string.Format("quantity{0}", suffix)" value="@Model.LumberProduct.Quantity" />
 <input type="hidden" id="@string.Format("sortOrder{0}", suffix)" value="@Model.LumberProduct.LengthInMillimeters" />
 <div id="@string.Format("lumberProductTab{0}", suffix)" class="tab-pane @active">
     <div class="well">
