Fixed a bug thrown on the inventory audit and order forms when a length that exists for a product doesn't exist for another product of the same type.

--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -882,6 +882,10 @@ td.totalPieceHeading {
     font-weight: bold;
 }
 
+.noLength {
+    margin-top: 12px;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #a0522d;
