--- a/Thermory.Web/Views/Shared/Order/_LumberLineItemForm.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberLineItemForm.cshtml
@@ -15,7 +15,7 @@
         <tr class="metricHeading">
             <td class="subCategoryUnit">mm</td>
             <td class="subCategoryDimensions">@subCategory.ThicknessInMillimeters x @subCategory.WidthInMillimeters</td>
-            @foreach (var length in millimeterLengths)
+            @foreach (var length in millimeterLengths.OrderBy(l => l))
             {
                 <td class="subCategoryCellPadding subCategoryLength">@length</td>
             }
@@ -37,9 +37,9 @@
             @Html.Raw(blankRow)
             <tr>
                 <td colspan="2" class="productType productTypeHeading"><div class="headingWidth" title="@lumberType.Name">@lumberType.Name</div></td>
-                @foreach (var length in millimeterLengths)
+                @foreach (var length in millimeterLengths.OrderBy(l => l))
                 {
-                    var lumberForLength = lumberType.LumberProducts.Single(p => p.LengthInMillimeters == length);
+                    var lumberForLength = lumberType.LumberProducts.SingleOrDefault(p => p.LengthInMillimeters == length);
                     var quantity = @lumberForLength == null ? 0 : lumberForLength.Quantity;
                     var onHandId = string.Format("quantityOnHand{0}{1}", lumberType.Id, length);
                     <td class="productType subCategoryCellPadding subCategoryLength">
@@ -55,16 +55,25 @@
                 @{
             var orderLinearFeet = 0.0;
                 }
-                @foreach (var length in millimeterLengths)
+                @foreach (var length in millimeterLengths.OrderBy(l => l))
                 {
-                    var productForLength = lumberType.LumberProducts.Single(p => p.LengthInMillimeters == length);
-                    var lineItem = Model.LumberLineItems == null ? null : Model.LumberLineItems.SingleOrDefault(li => li.LumberProductId == productForLength.Id);
-                    var orderQuantity = lineItem == null ? 0 : lineItem.Quantity;
-                    var lineItemId = lineItem == null ? Guid.Empty : lineItem.Id;
-                    orderLinearFeet += LumberCalculations.GetLinearFeet(orderQuantity, productForLength.LengthInInches);
                     <td class="productType subCategoryCellPadding subCategoryLength" style="border-top: none;">
                         <div class="form-group">
-                            <input type="text" name="lumberQty" id="@lineItemId" productid="@productForLength.Id" lumbertypeid="@lumberType.Id" lengthinmillimeters="@length" lengthininches="@productForLength.LengthInInches" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange="lumberProductQuantityChanged('@lumberType.Id', '@subCategory.WidthInInches', '@linearFeetId', '@squareFeetId');" />
+                            @{
+                    var productForLength = lumberType.LumberProducts.SingleOrDefault(p => p.LengthInMillimeters == length);
+                                if (productForLength != null)
+                                {
+                                    var lineItem = Model.LumberLineItems == null || productForLength == null ? null : Model.LumberLineItems.SingleOrDefault(li => li.LumberProductId == productForLength.Id);
+                                    var orderQuantity = lineItem == null ? 0 : lineItem.Quantity;
+                                    var lineItemId = lineItem == null ? Guid.Empty : lineItem.Id;
+                                    orderLinearFeet += LumberCalculations.GetLinearFeet(orderQuantity, productForLength.LengthInInches);
+                                    <input type="text" name="lumberQty" id="@lineItemId" productid="@productForLength.Id" lumbertypeid="@lumberType.Id" lengthinmillimeters="@length" lengthininches="@productForLength.LengthInInches" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange=" lumberProductQuantityChanged('@lumberType.Id', '@subCategory.WidthInInches', '@linearFeetId', '@squareFeetId'); " />
+                                }
+                                else
+                                {
+                                    <div class="noLength">N/A</div>
+                                }
+                            }
                         </div>
                     </td>
                 }
