--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -15,7 +15,19 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
-        <h5>5/11/2016</h5>
+        <h5>5/13/2016</h5>
+        <ul>
+            <li>
+                Lumber catalog is completely functional.
+                <ul>
+                    <li>Added ability to add/edit lumber types.</li>
+                    <li>Added ability to add/edit lumber products.</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li>
+        <h5>5/12/2016</h5>
         <ul>
             <li>Added ability to add and edit lumber sub categories.</li>
         </ul>
