--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
             </div>
         </div>
     </header>
-    <div id="body">
+    <div id="body" style="padding-top: 10px; border-top: solid 1px lightgray;">
         @RenderSection("featured", required: false)
         <section class="content-wrapper clear-fix">
             @RenderBody()
