--- a/Thermory.Web/Views/PurchaseOrder/Form.cshtml
+++ b/Thermory.Web/Views/PurchaseOrder/Form.cshtml
@@ -21,6 +21,9 @@
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
     </div>
+    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-arrow-left"></span> Back
+    </div>
     <br />
     <br />
     <ul class="nav nav-tabs" data-tabs="tabs">
@@ -58,6 +61,9 @@
     </div>
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
+    </div>
+    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-arrow-left"></span> Back
     </div>
 </div>
 
