--- a/Thermory.Web/Views/SalesOrder/Form.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Form.cshtml
@@ -23,6 +23,9 @@
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
     </div>
+    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "SalesOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-arrow-left"></span> Back
+    </div>
     <br />
     <br />
     <ul class="nav nav-tabs" data-tabs="tabs">
@@ -60,6 +63,9 @@
     </div>
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
+    </div>
+    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "SalesOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-arrow-left"></span> Back
     </div>
 </div>
 
